Add link to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <li><a href="canal-docs/canal/index.html">Canal</a></li>
   <li><a href="marid-docs/marid/index.html">Marid</a></li>
   <li><a href="transit-docs/transit/index.html">Transit</a></li>
+  <li><a href="ferrous-docs/ferrous/index.html">Ferrous</a></li>
 </ul>
 </section>
 
